--- a/vervebridgerestronapp/backend/package.json
+++ b/vervebridgerestronapp/backend/package.json
@@ -4,14 +4,19 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "build": "npm i"
   },
   "keywords": [],
-  "author": "",
+  "author": "Your Name",
   "license": "ISC",
-  "description": "",
+  "description": "Backend for the application",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
