--- a/vervebridgerestronapp/backend/package.json
+++ b/vervebridgerestronapp/backend/package.json
@@ -14,7 +14,11 @@
   "description": "Backend for the application",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "cors": "^2.8.5"
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.6.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
